# Disaster-Tweet-Classifier-App

./: .gitignore  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .gitignore  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/services/: predictor.py
backend/models/: disaster_tweet_pipeline.joblib
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/api/: predict.ts
frontend/src/routes/: +page.svelte
